--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h2>Fotografía de Arquitectura</h2>
             <p>Líneas, estructuras y espacios urbanos.</p>
             <div class="grid">
-                <div class="card"><img src="https://via.placeholder.com/600x400" alt="Arquitectura 1"></div>
+                <div class="card"><img src="foto1.jpg" alt="Arquitectura 1"></div>
                 <div class="card"><img src="https://via.placeholder.com/600x800" alt="Arquitectura 2"></div>
                 <div class="card"><img src="https://via.placeholder.com/600x400" alt="Arquitectura 3"></div>
             </div>
