--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header>
         <nav>
-            <div class="logo">TU NOMBRE</div>
+            <div class="logo">JOCELYN MORAGA RODRÍGUEZ</div>
             <ul>
                 <li><a href="#arquitectura">Arquitectura</a></li>
                 <li><a href="#artistico">Proyecto Artístico</a></li>
