--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             <h2>Proyecto Artístico: "Nombre del Proyecto"</h2>
             <p>Una exploración personal sobre la luz y la forma.</p>
             <div class="grid">
-                <div class="card"><img src="https://via.placeholder.com/600x800" alt="Arte 1"></div>
-                <div class="card"><img src="https://via.placeholder.com/600x400" alt="Arte 2"></div>
-                <div class="card"><img src="https://via.placeholder.com/600x800" alt="Arte 3"></div>
+                <div class="card"><img src="04.jpg" alt="Arte 1"></div>
+                <div class="card"><img src="01.jpg" alt="Arte 2"></div>
+                <div class="card"><img src="07.jpg" alt="Arte 3"></div>
             </div>
         </section>
     </main>
