--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <hr>
 
         <section id="artistico">
-            <h2>Proyecto Artístico: "Nombre del Proyecto"</h2>
+            <h2>Proyecto Artístico: "Ataraxia"</h2>
             <p>Una exploración personal sobre la luz y la forma.</p>
             <div class="grid">
                 <div class="card"><img src="04.jpg" alt="Arte 1"></div>
