--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </main>
 
     <footer id="contacto">
-        <p>© 2026 Tu Nombre Fotografía | <a href="mailto:tu@email.com">Contáctame</a></p>
+        <p>© 2026 Jocelyn Moraga Rodríguez | <a href="Jotaemearq@gmail.com">Contáctame</a></p>
     </footer>
 
 </body>
