--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
 </section>
     <main>
         <section id="arquitectura">
-            <h2>Fotografía de Arquitectura</h2>
-            <p>Líneas, estructuras y espacios urbanos.</p>
+            <h2>Arquitectura</h2>
             <div class="grid">
-                <a class="zoom" href="foto1.jpg"><img src="foto1.jpg" alt="Foto 1"></a>
+                <a class="zoom" href="foto4.jpg"><img src="foto4.jpg" alt="Foto 4"></a>
                 <a class="zoom" href="foto2.jpg"><img src="foto2.jpg" alt="Foto 2"></a>
                 <a class="zoom" href="foto3.jpg"><img src="foto3.jpg" alt="Foto 3"></a>
             </div>
