--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <section id="arquitectura">
             <h2>Arquitectura</h2>
             <div class="grid">
-                <a class="zoom" href="foto4.jpg"><img src="foto4.jpg" alt="Foto 4"></a>
+                <a class="zoom" href="foto1.jpg"><img src="foto1.jpg" alt="Descripción">
+</a>
                 <a class="zoom" href="foto2.jpg"><img src="foto2.jpg" alt="Foto 2"></a>
                 <a class="zoom" href="foto3.jpg"><img src="foto3.jpg" alt="Foto 3"></a>
             </div>
