--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
     <section id="sobre-mi">
         <img src="perfil.jpg" alt="Jocelyn Moraga" class="foto-perfil">
-        <h2>Hola, soy Jocelyn Moraga</h2>
-        <p>Fotógrafa especializada en capturar la esencia de los espacios y la narrativa visual artística.</p>
+        <h1>Hola, soy Jocelyn Moraga</h1>
+        <p>Arquitecta y fotógrafa. Capturando la esencia de los espacios y la narrativa visual artística.</p>
     </section>
 
     <main>
         <section id="arquitectura">
-            <h2>Arquitectura</h2>
+            <h2 class="titulo-seccion">Arquitectura</h2>
             <div class="grid">
                 <a class="galeria" href="foto1.jpg"><img src="foto1.jpg" alt="Arquitectura 1"></a>
                 <a class="galeria" href="foto2.jpg"><img src="foto2.jpg" alt="Arquitectura 2"></a>
@@ -39,28 +39,7 @@
         <hr>
 
         <section id="artistico">
-            <h2>Proyecto Artístico: "Ataraxia"</h2>
-            <p>Una exploración personal sobre la luz y la forma.</p>
+            <h2 class="titulo-seccion">Proyecto Artístico: "Ataraxia"</h2>
+            <p class="descripcion-proyecto">Una exploración personal sobre la luz y la forma.</p>
             <div class="grid">
                 <a class="galeria" href="04.jpg"><img src="04.jpg" alt="Ataraxia 1"></a>
-                <a class="galeria" href="09.jpg"><img src="09.jpg" alt="Ataraxia 2"></a>
-                <a class="galeria" href="08.jpg"><img src="08.jpg" alt="Ataraxia 3"></a>
-            </div>
-        </section>
-    </main>
-
-    <footer id="contacto">
-        <p>© 2026 Jocelyn Moraga Rodríguez</p>
-        <div class="social-links">
-            <a href="mailto:Jotaemearq@gmail.com">Email</a>
-            <a href="https://instagram.com/tuusuario" target="_blank">Instagram</a>
-            <a href="https://wa.me/tunúmero" target="_blank">WhatsApp</a>
-        </div>
-    </footer>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/luminous-lightbox/2.3.2/Luminous.min.js"></script>
-    <script>
-        new LuminousGallery(document.querySelectorAll(".galeria"));
-    </script>
-</body>
-</html>
