--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <header>
     <nav>
-        <div class="logo">JOCELYN MORAGA</div>
+        <div class="logo">JOCELYN MORAGA RODRÍGUEZ</div>
         <ul>
             <li><a href="#arquitectura">Arquitectura</a></li>
             <li><a href="#artistico">Ataraxia</a></li>
@@ -23,32 +23,33 @@
     <section id="arquitectura">
         <h2>Arquitectura</h2>
         <div class="grid">
-            <a class="galeria" href="foto1.jpg"><img src="foto1.jpg"></a>
-            <a class="galeria" href="foto2.jpg"><img src="foto2.jpg"></a>
-            <a class="galeria" href="foto3.jpg"><img src="foto3.jpg"></a>
+            <a class="galeria" href="foto1.jpg"><img src="foto1.jpg" alt="Obra 1"></a>
+            <a class="galeria" href="foto2.jpg"><img src="foto2.jpg" alt="Obra 2"></a>
+            <a class="galeria" href="foto3.jpg"><img src="foto3.jpg" alt="Obra 3"></a>
         </div>
     </section>
 
     <section id="artistico">
-        <h2>Proyecto Artístico: Ataraxia</h2>
+        <h2>Ataraxia</h2>
         <div class="grid">
-            <a class="galeria" href="04.jpg"><img src="04.jpg"></a>
-            <a class="galeria" href="09.jpg"><img src="09.jpg"></a>
-            <a class="galeria" href="08.jpg"><img src="08.jpg"></a>
+            <a class="galeria" href="04.jpg"><img src="04.jpg" alt="Ataraxia 1"></a>
+            <a class="galeria" href="09.jpg"><img src="09.jpg" alt="Ataraxia 2"></a>
+            <a class="galeria" href="08.jpg"><img src="08.jpg" alt="Ataraxia 3"></a>
         </div>
     </section>
 </main>
 
 <footer>
-    <p>© 2026 Jocelyn Moraga Rodríguez</p>
+    <p>© 2026 JOCELYN MORAGA RODRÍGUEZ</p>
     <div class="social-links">
-        <a href="mailto:Jotaemearq@gmail.com">Email</a>
-        <a href="https://instagram.com/tuusuario">Instagram</a>
+        <a href="mailto:Jotaemearq@gmail.com">EMAIL</a>
+        <a href="https://instagram.com/tuusuario">INSTAGRAM</a>
     </div>
 </footer>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/luminous-lightbox/2.3.2/Luminous.min.js"></script>
 <script>
+    // Esto mantiene el zoom al hacer clic
     new LuminousGallery(document.querySelectorAll(".galeria"));
 </script>
 
