--- a/index.html
+++ b/index.html
@@ -1,109 +1,56 @@
-/* Reset total para eliminar espacios blancos */
-* { margin: 0; padding: 0; box-sizing: border-box; }
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JOCELYN MORAGA RODRÍGUEZ</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/luminous-lightbox/2.3.2/luminous-basic.min.css">
+</head>
+<body>
 
-body { 
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; 
-    background-color: #000; /* Fondo negro para que la foto resalte más */
-    color: #fff;
-}
+<header>
+    <nav>
+        <div class="logo">JOCELYN MORAGA RODRÍGUEZ</div>
+        <ul>
+            <li><a href="#arquitectura">Arquitectura</a></li>
+            <li><a href="#artistico">Ataraxia</a></li>
+        </ul>
+    </nav>
+</header>
 
-/* Navegación Minimalista Flotante */
-header { 
-    padding: 30px; 
-    position: fixed; 
-    top: 0; 
-    width: 100%; 
-    z-index: 1000; 
-    background: linear-gradient(to bottom, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0) 100%);
-}
+<main>
+    <section id="arquitectura">
+        <h2 class="titulo-seccion">Arquitectura</h2>
+        <div class="grid">
+            <a class="galeria" href="foto1.jpg"><img src="foto1.jpg"></a>
+            <a class="galeria" href="foto2.jpg"><img src="foto2.jpg"></a>
+            <a class="galeria" href="foto3.jpg"><img src="foto3.jpg"></a>
+        </div>
+    </section>
 
-nav { 
-    display: flex; 
-    justify-content: space-between; 
-    align-items: center; 
-    max-width: 95%; 
-    margin: 0 auto; 
-}
+    <section id="artistico">
+        <h2 class="titulo-seccion">Ataraxia</h2>
+        <div class="grid">
+            <a class="galeria" href="04.jpg"><img src="04.jpg"></a>
+            <a class="galeria" href="09.jpg"><img src="09.jpg"></a>
+            <a class="galeria" href="08.jpg"><img src="08.jpg"></a>
+        </div>
+    </section>
+</main>
 
-.logo { 
-    font-weight: 700; 
-    letter-spacing: 5px; 
-    font-size: 0.8rem; 
-    text-transform: uppercase;
-}
+<footer>
+    <p>© 2026 JOCELYN MORAGA RODRÍGUEZ</p>
+    <div class="social-links">
+        <a href="mailto:Jotaemearq@gmail.com">EMAIL</a>
+        <a href="https://instagram.com/tuusuario">INSTAGRAM</a>
+    </div>
+</footer>
 
-nav ul { display: flex; list-style: none; gap: 30px; }
-nav ul li a { 
-    text-decoration: none; 
-    color: #fff; 
-    font-size: 10px; 
-    text-transform: uppercase; 
-    letter-spacing: 2px;
-    opacity: 0.7;
-    transition: opacity 0.3s;
-}
-nav ul li a:hover { opacity: 1; }
+<script src="https://cdnjs.cloudflare.com/ajax/libs/luminous-lightbox/2.3.2/Luminous.min.js"></script>
+<script>
+    new LuminousGallery(document.querySelectorAll(".galeria"));
+</script>
 
-/* Contenedor de impacto */
-main { width: 100%; }
-
-section { width: 100%; padding-top: 0; }
-
-.titulo-seccion {
-    padding: 100px 5% 40px;
-    font-weight: 200;
-    font-size: 2rem;
-    letter-spacing: 10px;
-    text-transform: uppercase;
-    text-align: left;
-}
-
-/* La Fotografía como protagonista absoluta */
-.grid { 
-    display: flex;
-    flex-direction: column;
-    gap: 0; /* Sin espacio entre fotos para un look continuo */
-}
-
-.galeria { 
-    width: 100%; 
-    display: block;
-    overflow: hidden;
-    line-height: 0; /* Elimina espacio blanco debajo de imágenes */
-}
-
-.galeria img { 
-    width: 100%; 
-    height: auto; 
-    display: block;
-    filter: brightness(0.9);
-    transition: filter 0.6s ease, transform 0.8s ease;
-}
-
-.galeria img:hover { 
-    filter: brightness(1.1);
-    transform: scale(1.02); /* Un zoom muy sutil al pasar el mouse */
-}
-
-/* Footer Minimal */
-footer { 
-    padding: 100px 5%; 
-    background: #000; 
-    text-align: left;
-    border-top: 1px solid #222;
-}
-
-.social-links { margin-top: 30px; display: flex; gap: 40px; }
-.social-links a { 
-    color: #555; 
-    text-decoration: none; 
-    font-size: 11px; 
-    letter-spacing: 2px;
-}
-.social-links a:hover { color: #fff; }
-
-/* Responsive */
-@media (max-width: 768px) {
-    .titulo-seccion { font-size: 1.2rem; }
-    nav ul { display: none; } /* En móvil ocultamos menú para limpiar la vista */
-}
+</body>
+</html>
