--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
 </head>
 <body>
 
+<div class="splash">
+    <div class="splash-content">
+        <h1>JOCELYN MORAGA RODRÍGUEZ</h1>
+        <p>ARQUITECTURA & NARRATIVA VISUAL</p>
+    </div>
+</div>
+
 <header>
     <nav>
-        <div class="logo">JOCELYN MORAGA RODRÍGUEZ</div>
+        <div class="logo">JMR</div>
         <ul>
             <li><a href="#arquitectura">Arquitectura</a></li>
             <li><a href="#artistico">Ataraxia</a></li>
@@ -23,28 +30,33 @@
     <section id="arquitectura">
         <h2 class="titulo-seccion">Arquitectura</h2>
         <div class="grid">
-            <a class="galeria" href="foto1.jpg"><img src="foto1.jpg"></a>
-            <a class="galeria" href="foto2.jpg"><img src="foto2.jpg"></a>
-            <a class="galeria" href="foto3.jpg"><img src="foto3.jpg"></a>
+            <a class="galeria full" href="foto1.jpg"><img src="foto1.jpg"></a>
+            
+            <div class="row">
+                <a class="galeria" href="foto2.jpg"><img src="foto2.jpg"></a>
+                <a class="galeria" href="foto3.jpg"><img src="foto3.jpg"></a>
+            </div>
         </div>
     </section>
 
     <section id="artistico">
         <h2 class="titulo-seccion">Ataraxia</h2>
         <div class="grid">
-            <a class="galeria" href="04.jpg"><img src="04.jpg"></a>
-            <a class="galeria" href="09.jpg"><img src="09.jpg"></a>
-            <a class="galeria" href="08.jpg"><img src="08.jpg"></a>
+            <a class="galeria full" href="04.jpg"><img src="04.jpg"></a>
+            <div class="row">
+                <a class="galeria" href="09.jpg"><img src="09.jpg"></a>
+                <a class="galeria" href="08.jpg"><img src="08.jpg"></a>
+            </div>
         </div>
     </section>
 </main>
 
 <footer>
-    <p>© 2026 JOCELYN MORAGA RODRÍGUEZ</p>
     <div class="social-links">
         <a href="mailto:Jotaemearq@gmail.com">EMAIL</a>
         <a href="https://instagram.com/tuusuario">INSTAGRAM</a>
     </div>
+    <p>© 2026 JOCELYN MORAGA RODRÍGUEZ</p>
 </footer>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/luminous-lightbox/2.3.2/Luminous.min.js"></script>
