--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         <h2 class="titulo-seccion">Arquitectura</h2>
         <div class="grid">
             <div class="row">
-                <a class="galeria" href="foto1.jpg"><img src="foto1.jpg"></a>
+                <a class="galeria" href="foto5.jpg"><img src="foto1.jpg"></a>
                 <a class="galeria" href="foto2.jpg"><img src="foto2.jpg"></a>
             </div>
             <div class="row">
                 <a class="galeria" href="foto3.jpg"><img src="foto3.jpg"></a>
-                <a class="galeria" href="foto4.jpg"><img src="foto4.jpg"></a>
+                <a class="galeria" href="foto1.jpg"><img src="foto4.jpg"></a>
             </div>
         </div>
     </section>
@@ -54,7 +54,7 @@
             </div>
             <div class="row">
                 <a class="galeria" href="08.jpg"><img src="08.jpg"></a>
-                <a class="galeria" href="foto5.jpg"><img src="foto5.jpg"></a>
+                <a class="galeria" href="07.jpg"><img src="foto5.jpg"></a>
             </div>
         </div>
     </section>
