--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
     <nav>
         <div class="logo">JMR</div>
         <ul>
-            <li><a href="#arquitectura">Arquitectura</a></li>
-            <li><a href="#ataraxia">Ataraxia</a></li>
-            <li><a href="#contacto">Contacto</a></li>
+            <ul>
+    <li><a href="#arquitectura">Arquitectura</a></li>
+    <li><a href="#interiores">Interiores</a></li> <li><a href="#ataraxia">Ataraxia</a></li>
+    <li><a href="#contacto">Contacto</a></li>
+</ul>
         </ul>
     </nav>
 </header>
@@ -31,6 +33,19 @@
 <main>
     <section id="arquitectura">
         <h2 class="titulo-seccion">Arquitectura</h2>
+        <section id="interiores">
+    <h2 class="titulo-seccion">Interiores & Espacios</h2>
+    <div class="grid">
+        <div class="row">
+            <a class="galeria" href="int1.jpg"><img src="int1.jpg"></a>
+            <a class="galeria" href="int2.jpg"><img src="int2.jpg"></a>
+        </div>
+        <div class="row">
+            <a class="galeria" href="int3.jpg"><img src="int3.jpg"></a>
+            <a class="galeria" href="int4.jpg"><img src="int4.jpg"></a>
+        </div>
+    </div>
+</section>
         <div class="grid">
             <div class="row">
                 <a class="galeria" href="foto5.jpg"><img src="foto1.jpg"></a>
@@ -39,6 +54,7 @@
             <div class="row">
                 <a class="galeria" href="foto3.jpg"><img src="foto3.jpg"></a>
                 <a class="galeria" href="foto1.jpg"><img src="foto4.jpg"></a>
+                
             </div>
         </div>
     </section>
