--- a/index.html
+++ b/index.html
@@ -19,47 +19,55 @@
 
 <header>
     <nav>
+        <header>
+    <nav>
         <div class="logo">JMR</div>
         <ul>
-            <ul>
-    <li><a href="#arquitectura">Arquitectura</a></li>
-    <li><a href="#interiores">Interiores</a></li> <li><a href="#ataraxia">Ataraxia</a></li>
-    <li><a href="#contacto">Contacto</a></li>
-</ul>
+            <li><a href="#arquitectura">Arquitectura</a></li>
+            <li><a href="#urbano">Urbano</a></li>
+            <li><a href="#interiores">Interiores</a></li>
+            <li><a href="#ataraxia">Ataraxia</a></li>
         </ul>
     </nav>
 </header>
-
 <main>
     <section id="arquitectura">
         <h2 class="titulo-seccion">Arquitectura</h2>
-        <section id="interiores">
-    <h2 class="titulo-seccion">Interiores & Espacios</h2>
-    <div class="grid">
-        <div class="row">
-            <a class="galeria" href="int1.jpg"><img src="int1.jpg"></a>
-            <a class="galeria" href="int2.jpg"><img src="int2.jpg"></a>
-        </div>
-        <div class="row">
-            <a class="galeria" href="int3.jpg"><img src="int3.jpg"></a>
-            <a class="galeria" href="int4.jpg"><img src="int4.jpg"></a>
-        </div>
-    </div>
-</section>
         <div class="grid">
             <div class="row">
-                <a class="galeria" href="foto5.jpg"><img src="foto1.jpg"></a>
+                <a class="galeria" href="foto1.jpg"><img src="foto1.jpg"></a>
                 <a class="galeria" href="foto2.jpg"><img src="foto2.jpg"></a>
             </div>
             <div class="row">
                 <a class="galeria" href="foto3.jpg"><img src="foto3.jpg"></a>
-                <a class="galeria" href="foto1.jpg"><img src="foto4.jpg"></a>
-                
+                <a class="galeria" href="foto4.jpg"><img src="foto4.jpg"></a>
             </div>
         </div>
     </section>
 
-    <hr class="divisor">
+    <section id="urbano">
+        <h2 class="titulo-seccion">Urbano & Ciudad</h2>
+        <div class="grid">
+            <div class="row">
+                <a class="galeria" href="urbano1.jpg"><img src="urbano1.jpg"></a>
+                <a class="galeria" href="urbano2.jpg"><img src="urbano2.jpg"></a>
+            </div>
+            <div class="row">
+                <a class="galeria" href="urbano3.jpg"><img src="urbano3.jpg"></a>
+                <a class="galeria" href="urbano4.jpg"><img src="urbano4.jpg"></a>
+            </div>
+        </div>
+    </section>
+
+    <section id="interiores">
+        <h2 class="titulo-seccion">Interiores</h2>
+        <div class="grid">
+            <div class="row">
+                <a class="galeria" href="int1.jpg"><img src="int1.jpg"></a>
+                <a class="galeria" href="int2.jpg"><img src="int2.jpg"></a>
+            </div>
+        </div>
+    </section>
 
     <section id="ataraxia">
         <h2 class="titulo-seccion">Ataraxia</h2>
@@ -70,11 +78,12 @@
             </div>
             <div class="row">
                 <a class="galeria" href="08.jpg"><img src="08.jpg"></a>
-                <a class="galeria" href="07.jpg"><img src="foto5.jpg"></a>
+                <a class="galeria" href="05.jpg"><img src="05.jpg"></a>
             </div>
         </div>
     </section>
 </main>
+
 
 <footer id="contacto">
     <div class="social-links">
