--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JOCELYN MORAGA RODRÍGUEZ</title>
+    <title>JOCELYN MORAGA RODRÍGUEZ | Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/luminous-lightbox/2.3.2/luminous-basic.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;600&display=swap" rel="stylesheet">
@@ -19,8 +19,6 @@
 
 <header>
     <nav>
-        <header>
-    <nav>
         <div class="logo">JMR</div>
         <ul>
             <li><a href="#arquitectura">Arquitectura</a></li>
@@ -30,17 +28,18 @@
         </ul>
     </nav>
 </header>
+
 <main>
     <section id="arquitectura">
         <h2 class="titulo-seccion">Arquitectura</h2>
         <div class="grid">
             <div class="row">
-                <a class="galeria" href="foto1.jpg"><img src="foto1.jpg"></a>
-                <a class="galeria" href="foto2.jpg"><img src="foto2.jpg"></a>
+                <a class="galeria" href="foto1.jpg"><img src="foto1.jpg" alt="Arq 1"></a>
+                <a class="galeria" href="foto2.jpg"><img src="foto2.jpg" alt="Arq 2"></a>
             </div>
             <div class="row">
-                <a class="galeria" href="foto3.jpg"><img src="foto3.jpg"></a>
-                <a class="galeria" href="foto4.jpg"><img src="foto4.jpg"></a>
+                <a class="galeria" href="foto3.jpg"><img src="foto3.jpg" alt="Arq 3"></a>
+                <a class="galeria" href="foto4.jpg"><img src="foto4.jpg" alt="Arq 4"></a>
             </div>
         </div>
     </section>
@@ -49,12 +48,12 @@
         <h2 class="titulo-seccion">Urbano & Ciudad</h2>
         <div class="grid">
             <div class="row">
-                <a class="galeria" href="urbano1.jpg"><img src="urbano1.jpg"></a>
-                <a class="galeria" href="urbano2.jpg"><img src="urbano2.jpg"></a>
+                <a class="galeria" href="urbano1.jpg"><img src="urbano1.jpg" alt="Urbano 1"></a>
+                <a class="galeria" href="urbano2.jpg"><img src="urbano2.jpg" alt="Urbano 2"></a>
             </div>
             <div class="row">
-                <a class="galeria" href="urbano3.jpg"><img src="urbano3.jpg"></a>
-                <a class="galeria" href="urbano4.jpg"><img src="urbano4.jpg"></a>
+                <a class="galeria" href="urbano3.jpg"><img src="urbano3.jpg" alt="Urbano 3"></a>
+                <a class="galeria" href="urbano4.jpg"><img src="urbano4.jpg" alt="Urbano 4"></a>
             </div>
         </div>
     </section>
@@ -63,41 +62,4 @@
         <h2 class="titulo-seccion">Interiores</h2>
         <div class="grid">
             <div class="row">
-                <a class="galeria" href="int1.jpg"><img src="int1.jpg"></a>
-                <a class="galeria" href="int2.jpg"><img src="int2.jpg"></a>
-            </div>
-        </div>
-    </section>
-
-    <section id="ataraxia">
-        <h2 class="titulo-seccion">Ataraxia</h2>
-        <div class="grid">
-            <div class="row">
-                <a class="galeria" href="04.jpg"><img src="04.jpg"></a>
-                <a class="galeria" href="09.jpg"><img src="09.jpg"></a>
-            </div>
-            <div class="row">
-                <a class="galeria" href="08.jpg"><img src="08.jpg"></a>
-                <a class="galeria" href="05.jpg"><img src="05.jpg"></a>
-            </div>
-        </div>
-    </section>
-</main>
-
-
-<footer id="contacto">
-    <div class="social-links">
-        <a href="mailto:Jotaemearq@gmail.com">EMAIL</a>
-        <a href="https://instagram.com/tuusuario">INSTAGRAM</a>
-    </div>
-    <p>© 2026 JOCELYN MORAGA RODRÍGUEZ</p>
-</footer>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/luminous-lightbox/2.3.2/Luminous.min.js"></script>
-<script>
-    // Activa el zoom
-    new LuminousGallery(document.querySelectorAll(".galeria"));
-</script>
-
-</body>
-</html>
+                <a class="galeria" href="int1.jpg"><img src="int1.jpg" alt
