--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h2 class="titulo-seccion">Urbano & Ciudad</h2>
         <div class="grid">
             <div class="row">
-                <a class="galeria" href="urbano1.jpg"><img src="urbano1.jpg" alt="Urbano 1"></a>
+                <a class="galeria" href="DSC04814.jpeg"><img src="DSC04814.jpeg" alt="Urbano 1"></a>
                 <a class="galeria" href="urbano2.jpg"><img src="urbano2.jpg" alt="Urbano 2"></a>
             </div>
             <div class="row">
@@ -62,4 +62,4 @@
         <h2 class="titulo-seccion">Interiores</h2>
         <div class="grid">
             <div class="row">
-                <a class="galeria" href="int1.jpg"><img src="int1.jpg" alt
+                <a class="galeria" href="DSC04814.jpeg"><img src="DSC04814.jpeg" alt
