--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h2 class="titulo-seccion">Urbano & Ciudad</h2>
         <div class="grid">
             <div class="row">
-                <a class="galeria" href="DSC04814.jpeg"><img src="DSC04814.jpeg" alt="Urbano 1"></a>
+                <a class="galeria" href="urbano1.jpg"><img src="urbano1.jpg" alt="Urbano 1"></a>
                 <a class="galeria" href="urbano2.jpg"><img src="urbano2.jpg" alt="Urbano 2"></a>
             </div>
             <div class="row">
@@ -62,4 +62,52 @@
         <h2 class="titulo-seccion">Interiores</h2>
         <div class="grid">
             <div class="row">
-                <a class="galeria" href="DSC04814.jpeg"><img src="DSC04814.jpeg" alt
+                <a class="galeria" href="int1.jpg"><img src="int1.jpg" alt="Interior 1"></a>
+                <a class="galeria" href="int2.jpg"><img src="int2.jpg" alt="Interior 2"></a>
+            </div>
+        </div>
+    </section>
+
+    <section id="ataraxia">
+        <h2 class="titulo-seccion">Ataraxia</h2>
+        <div class="grid">
+            <div class="row">
+                <a class="galeria" href="04.jpg"><img src="04.jpg" alt="Ataraxia 1"></a>
+                <a class="galeria" href="09.jpg"><img src="09.jpg" alt="Ataraxia 2"></a>
+            </div>
+            <div class="row">
+                <a class="galeria" href="08.jpg"><img src="08.jpg" alt="Ataraxia 3"></a>
+                <a class="galeria" href="05.jpg"><img src="05.jpg" alt="Ataraxia 4"></a>
+                
+            </div>
+        </div>
+    </section>
+    <section id="Espacios Urbanos">
+        <h2 class="titulo-seccion">Espacios Urbanos</h2>
+        <div class="grid">
+            <div class="row">
+                <a class="galeria" href="DSC04814.jpeg"><img src="DSC04814.jpeg" alt="Ataraxia 1"></a>
+                <a class="galeria" href="09.jpg"><img src="09.jpg" alt="Ataraxia 2"></a>
+            </div>
+            <div class="row">
+                <a class="galeria" href="08.jpg"><img src="08.jpg" alt="Ataraxia 3"></a>
+                <a class="galeria" href="05.jpg"><img src="05.jpg" alt="Ataraxia 4"></a>
+            </div>
+        </div>
+</main>
+
+<footer id="contacto">
+    <div class="social-links">
+        <a href="mailto:Jotaemearq@gmail.com">EMAIL</a>
+        <a href="https://instagram.com/tuusuario" target="_blank">INSTAGRAM</a>
+    </div>
+    <p>© 2026 JOCELYN MORAGA RODRÍGUEZ</p>
+</footer>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/luminous-lightbox/2.3.2/Luminous.min.js"></script>
+<script>
+    new LuminousGallery(document.querySelectorAll(".galeria"));
+</script>
+
+</body>
+</html>
