--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
         <h2 class="titulo-seccion">Espacio Urbano</h2>
         <div class="grid">
             <div class="row">
-                <a class="galeria" href="urbano1.jpg"><img src="urbano1.jpg"></a>
-                <a class="galeria" href="urbano2.jpg"><img src="urbano2.jpg"></a>
+                <a class="galeria" href="DSC04814.jpeg"><img src="DSC04814.jpeg"></a>
+                <a class="galeria" href="DSC04883.jpeg"><img src="DSC04883.jpeg"></a>
             </div>
             <div class="row">
-                <a class="galeria" href="urbano3.jpg"><img src="urbano3.jpg"></a>
-                <a class="galeria" href="urbano4.jpg"><img src="urbano4.jpg"></a>
+                <a class="galeria" href="DSC04924.jpeg"><img src="DSC04924.jpeg"></a>
+                <a class="galeria" href="foto5.jpg"><img src="foto5.jpg"></a>
             </div>
         </div>
     </section>
