--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <div class="logo">JMR</div>
         <ul>
             <li><a href="#arquitectura">Arquitectura</a></li>
+            <li><a href="#Espacios">Espacios</a></li>
             <li><a href="#ataraxia">Ataraxia</a></li>
             <li><a href="#contacto">Contacto</a></li>
         </ul>
     </nav>
 </header>
-
 <main>
     <section id="arquitectura">
         <h2 class="titulo-seccion">Arquitectura</h2>
@@ -41,10 +41,24 @@
                 <a class="galeria" href="foto4.jpg"><img src="foto4.jpg"></a>
             </div>
         </div>
+        <main>
+    <section id="Espacios">
+        <h2 class="titulo-seccion">Espacios</h2>
+        <div class="grid">
+            <div class="row">
+                <a class="galeria" href="DSC04814.jpeg"><img src="DSC04814.jpeg"></a>
+                <a class="galeria" href="DSC04883.jpeg"><img src="DSC04883.jpeg"></a>
+            </div>
+            <div class="row">
+                <a class="galeria" href="DSC04883.jpeg"><img src="DSC04883.jpeg"></a>
+                <a class="galeria" href="DSC04924.jpeg"><img src="DSC04924.jpeg"></a>
+            </div>
+        </div>
     </section>
 
     <hr class="divisor">
-
+    </section>
+  <hr class="divisor">
     <section id="ataraxia">
         <h2 class="titulo-seccion">Ataraxia</h2>
         <div class="grid">
