--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="splash">
     <div class="splash-content">
         <h1 class="fade-in">JOCELYN MORAGA RODRÍGUEZ</h1>
-        <p class="fade-in-delayed">ARQUITECTURA & NARRATIVA VISUAL</p>
+        <p class="fade-in-delayed">ESPACIOS</p>
     </div>
 </div>
 
@@ -22,12 +22,13 @@
         <div class="logo">JMR</div>
         <ul>
             <li><a href="#arquitectura">Arquitectura</a></li>
-            <li><a href="#Espacios">Espacios</a></li>
+            <li><a href="#urbano">Espacio Urbano</a></li>
             <li><a href="#ataraxia">Ataraxia</a></li>
             <li><a href="#contacto">Contacto</a></li>
         </ul>
     </nav>
 </header>
+
 <main>
     <section id="arquitectura">
         <h2 class="titulo-seccion">Arquitectura</h2>
@@ -41,52 +42,16 @@
                 <a class="galeria" href="foto4.jpg"><img src="foto4.jpg"></a>
             </div>
         </div>
-        <main>
-    <section id="Espacios">
-        <h2 class="titulo-seccion">Espacios</h2>
-        <div class="grid">
-            <div class="row">
-                <a class="galeria" href="DSC04814.jpeg"><img src="DSC04814.jpeg"></a>
-                <a class="galeria" href="DSC04883.jpeg"><img src="DSC04883.jpeg"></a>
-            </div>
-            <div class="row">
-                <a class="galeria" href="DSC04883.jpeg"><img src="DSC04883.jpeg"></a>
-                <a class="galeria" href="DSC04924.jpeg"><img src="DSC04924.jpeg"></a>
-            </div>
-        </div>
     </section>
 
     <hr class="divisor">
-    </section>
-  <hr class="divisor">
-    <section id="ataraxia">
-        <h2 class="titulo-seccion">Ataraxia</h2>
+
+    <section id="urbano">
+        <h2 class="titulo-seccion">Espacio Urbano</h2>
         <div class="grid">
             <div class="row">
-                <a class="galeria" href="04.jpg"><img src="04.jpg"></a>
-                <a class="galeria" href="09.jpg"><img src="09.jpg"></a>
+                <a class="galeria" href="urbano1.jpg"><img src="urbano1.jpg"></a>
+                <a class="galeria" href="urbano2.jpg"><img src="urbano2.jpg"></a>
             </div>
             <div class="row">
-                <a class="galeria" href="08.jpg"><img src="08.jpg"></a>
-                <a class="galeria" href="foto5.jpg"><img src="foto5.jpg"></a>
-            </div>
-        </div>
-    </section>
-</main>
-
-<footer id="contacto">
-    <div class="social-links">
-        <a href="mailto:Jotaemearq@gmail.com">EMAIL</a>
-        <a href="https://instagram.com/tuusuario">INSTAGRAM</a>
-    </div>
-    <p>© 2026 JOCELYN MORAGA RODRÍGUEZ</p>
-</footer>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/luminous-lightbox/2.3.2/Luminous.min.js"></script>
-<script>
-    // Activa el zoom
-    new LuminousGallery(document.querySelectorAll(".galeria"));
-</script>
-
-</body>
-</html>
+                <a class="galeria"
