--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a class="galeria" href="foto2.jpg"><img src="foto2.jpg"></a>
             </div>
             <div class="row">
-                <a class="galeria" href="foto3.jpg"><img src="foto3.jpg"></a>
+                <a class="galeria" href="foto5.jpg"><img src="foto5.jpg"></a>
                 <a class="galeria" href="foto4.jpg"><img src="foto4.jpg"></a>
             </div>
         </div>
@@ -50,8 +50,45 @@
         <h2 class="titulo-seccion">Espacio Urbano</h2>
         <div class="grid">
             <div class="row">
-                <a class="galeria" href="urbano1.jpg"><img src="urbano1.jpg"></a>
-                <a class="galeria" href="urbano2.jpg"><img src="urbano2.jpg"></a>
+                <a class="galeria" href="DSC04808.jpeg"><img src="DSC04808.jpeg"></a>
+                <a class="galeria" href="DSC04814.jpeg"><img src="DSC04814.jpeg"></a>
             </div>
             <div class="row">
-                <a class="galeria"
+                <a class="galeria" href="DSC04883.jpeg"><img src="DSC04883.jpeg"></a>
+                <a class="galeria" href="DSC04924.jpeg"><img src="DSC04924.jpeg"></a>
+            </div>
+        </div>
+    </section>
+
+    <hr class="divisor">
+
+    <section id="ataraxia">
+        <h2 class="titulo-seccion">Ataraxia</h2>
+        <div class="grid">
+            <div class="row">
+                <a class="galeria" href="04.jpg"><img src="04.jpg"></a>
+                <a class="galeria" href="09.jpg"><img src="09.jpg"></a>
+            </div>
+            <div class="row">
+                <a class="galeria" href="08.jpg"><img src="08.jpg"></a>
+                <a class="galeria" href="03.jpg"><img src="03.jpg"></a>
+            </div>
+        </div>
+    </section>
+</main>
+
+<footer id="contacto">
+    <div class="social-links">
+        <a href="mailto:Jotaemearq@gmail.com">EMAIL</a>
+        <a href="https://instagram.com/tuusuario">INSTAGRAM</a>
+    </div>
+    <p>© 2026 JOCELYN MORAGA RODRÍGUEZ</p>
+</footer>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/luminous-lightbox/2.3.2/Luminous.min.js"></script>
+<script>
+    new LuminousGallery(document.querySelectorAll(".galeria"));
+</script>
+
+</body>
+</html>
