--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="splash">
     <div class="splash-content">
         <h1 class="fade-in">JOCELYN MORAGA RODRÍGUEZ</h1>
-        <p class="fade-in-delayed">ESPACIOS</p>
+        <p class="fade-in-delayed">ARQUITECTURA Y NARRATIVA VISUAL</p>
     </div>
 </div>
 
