--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <nav>
         <div class="logo">JMR</div>
         <ul>
-            <li><a href="#arquitectura">Arquitectura</a></li>
-            <li><a href="#urbano">Espacio Urbano</a></li>
-            <li><a href="#ataraxia">Ataraxia</a></li>
-            <li><a href="#contacto">Contacto</a></li>
+            <li><a href="#arquitectura">Arq</a></li>
+            <li><a href="#urbano">Urbano</a></li>
+            <li><a href="#ataraxia">Obras</a></li>
+            <li><a href="#contacto" class="btn-contacto">Contacto</a></li>
         </ul>
     </nav>
 </header>
@@ -80,12 +80,11 @@
 
 <footer id="contacto">
     <div class="social-links">
-        <a href="mailto:Jotaemearq@gmail.com">EMAIL</a>
-        <a href="https://instagram.com/tuusuario">INSTAGRAM</a>
+        <a href="mailto:Jotaemearq@gmail.com" class="link-subrayado">EMAIL</a>
+        <a href="https://instagram.com/tuusuario" target="_blank" class="link-subrayado">INSTAGRAM</a>
     </div>
-    <p>© 2026 JOCELYN MORAGA RODRÍGUEZ</p>
+    <p>© 2026 JOCELYN MORAGA RODRÍGUEZ </p>
 </footer>
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/luminous-lightbox/2.3.2/Luminous.min.js"></script>
 <script>
     new LuminousGallery(document.querySelectorAll(".galeria"));
