--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <hr class="divisor">
 
     <section id="ataraxia">
-        <h2 class="titulo-seccion">Ataraxia</h2>
+        <h2 class="titulo-seccion">Minimal Project: Ataraxia</h2>
         <div class="grid">
             <div class="row">
                 <a class="galeria" href="04.jpg"><img src="04.jpg"></a>
