--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <footer id="contacto">
     <div class="social-links">
         <a href="mailto:Jotaemearq@gmail.com" class="link-subrayado">EMAIL</a>
-        <a href="https://instagram.com/tuusuario" target="_blank" class="link-subrayado">INSTAGRAM</a>
+        <a href="https://instagram.com/jmoraga.ph" target="_blank" class="link-subrayado">INSTAGRAM</a>
     </div>
     <p>© 2026 JOCELYN MORAGA RODRÍGUEZ </p>
 </footer>
