--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JOCELYN MORAGA RODRÍGUEZ</title>
+    <title>MARÍA RODRÍGUEZ</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/luminous-lightbox/2.3.2/luminous-basic.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;600&display=swap" rel="stylesheet">
@@ -13,14 +13,14 @@
 
 <div class="splash">
     <div class="splash-content">
-        <h1 class="fade-in">JOCELYN MORAGA RODRÍGUEZ</h1>
+        <h1 class="fade-in">MARÍA RODRÍGUEZ</h1>
         <p class="fade-in-delayed">ARQUITECTURA Y NARRATIVA VISUAL</p>
     </div>
 </div>
 
 <header>
     <nav>
-        <div class="logo">JMR</div>
+        <div class="logo">MR</div>
         <ul>
             <li><a href="#arquitectura">Arq</a></li>
             <li><a href="#urbano">Urbano</a></li>
@@ -83,7 +83,7 @@
         <a href="mailto:Jotaemearq@gmail.com" class="link-subrayado">EMAIL</a>
         <a href="https://instagram.com/jmoraga.ph" target="_blank" class="link-subrayado">INSTAGRAM</a>
     </div>
-    <p>© 2026 JOCELYN MORAGA RODRÍGUEZ </p>
+    <p>© 2026 MARÍA RODRÍGUEZ </p>
 </footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/luminous-lightbox/2.3.2/Luminous.min.js"></script>
 <script>
