--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section id="sobre-mi" class="seccion-perfil">
         <div class="perfil-container">
             <div class="perfil-foto">
-                <img src="perfil.jpg" alt="María Rodríguez">
+                <img src="1D0C0231-5ED2-47EB-A76E-E4AD82846D88.jpg" alt="María Rodríguez">
             </div>
             <div class="perfil-texto">
                 <h2 class="titulo-seccion">Sobre mí</h2>
