--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="splash">
     <div class="splash-content">
         <h1 class="fade-in">MARÍA RODRÍGUEZ</h1>
-        <p class="fade-in-delayed">ARQUITECTURA Y NARRATIVA VISUAL</p>
+        <p class="fade-in-delayed">NARRATIVA VISUAL</p>
     </div>
 </div>
 
@@ -38,8 +38,8 @@
             </div>
             <div class="perfil-texto">
                 <h2 class="titulo-seccion">Sobre mí</h2>
-                <p>Arquitecta con enfoque en la narrativa visual y el espacio urbano. Mi trabajo busca capturar la esencia del minimalismo a través de la fotografía y el diseño, explorando la relación entre la estructura, la luz y la forma.</p>
-                <p>Especializada en documentación de obra y proyectos de paisaje, entiendo la arquitectura como un lenguaje que se narra a través del encuadre.</p>
+                <p>Arquitecta con enfoque en la narrativa visual. Mi trabajo busca capturar la esencia del minimalismo a través de la fotografía y el diseño, explorando la relación entre la estructura, la luz y la forma.</p>
+                <p>Basada en Sevilla, mi fotografía busca el equilibrio entre la estética artística de mis proyectos personales y la precisión técnica que requiere unna fotografía de alto nivel</p>
             </div>
         </div>
     </section>
